--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,26 @@ wheels/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
+
+# Add Javascript/Vue ignore directives
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
